// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkButton default renders correctly 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition-property: background-color,box-shadow,color;
  transition-property: background-color,box-shadow,color;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  border: 0;
  cursor: pointer;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 3.75em;
  border-radius: 3.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.125em;
  -moz-letter-spacing: 0.125em;
  -ms-letter-spacing: 0.125em;
  letter-spacing: 0.125em;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  padding: 0 2.5em;
  background-color: transparent;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);
  color: #000;
}

.c0:active,
.c0:hover {
  box-shadow: inset 0 0 0 1px #FD5E0F;
  color: #FD5E0F;
}

.c0:active {
  background-color: rgba(253,94,15,0.2);
}

.c0:disabled {
  pointer-events: none;
  opacity: 0.25;
}

<a
  className="c0"
  href="/engineering/ux#example-list"
>
  Get Started
</a>
`;

exports[`LinkButton large renders correctly 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition-property: background-color,box-shadow,color;
  transition-property: background-color,box-shadow,color;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  border: 0;
  cursor: pointer;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 3.75em;
  border-radius: 3.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.125em;
  -moz-letter-spacing: 0.125em;
  -ms-letter-spacing: 0.125em;
  letter-spacing: 0.125em;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  padding: 0 2.5em;
  background-color: transparent;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);
  color: #000;
  font-size: 0.8rem;
  height: 4em;
  line-height: 4em;
  border-radius: 4em;
  padding: 0 3em;
}

.c0:active,
.c0:hover {
  box-shadow: inset 0 0 0 1px #FD5E0F;
  color: #FD5E0F;
}

.c0:active {
  background-color: rgba(253,94,15,0.2);
}

.c0:disabled {
  pointer-events: none;
  opacity: 0.25;
}

<a
  className="c0"
  href="/engineering/ux#example-list"
  large="true"
>
  Get Started
</a>
`;

exports[`LinkButton primary renders correctly 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition-property: background-color,box-shadow,color;
  transition-property: background-color,box-shadow,color;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  border: 0;
  cursor: pointer;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 3.75em;
  border-radius: 3.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.125em;
  -moz-letter-spacing: 0.125em;
  -ms-letter-spacing: 0.125em;
  letter-spacing: 0.125em;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  padding: 0 2.5em;
  background-color: transparent;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);
  color: #000;
  background-color: #000;
  box-shadow: none;
  color: #fff !important;
}

.c0:active,
.c0:hover {
  box-shadow: inset 0 0 0 1px #FD5E0F;
  color: #FD5E0F;
}

.c0:active {
  background-color: rgba(253,94,15,0.2);
}

.c0:disabled {
  pointer-events: none;
  opacity: 0.25;
}

.c0:hover {
  background-color: #FD5E0F;
}

.c0:active {
  background-color: #722601;
}

<a
  className="c0"
  href="/engineering/ux#example-list"
  primary="true"
>
  Get Started
</a>
`;

exports[`LinkButton small renders correctly 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition-property: background-color,box-shadow,color;
  transition-property: background-color,box-shadow,color;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  border: 0;
  cursor: pointer;
  display: inline-block;
  font-size: 0.75rem;
  line-height: 3.75em;
  border-radius: 3.75em;
  font-weight: 400;
  -webkit-letter-spacing: 0.125em;
  -moz-letter-spacing: 0.125em;
  -ms-letter-spacing: 0.125em;
  letter-spacing: 0.125em;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  padding: 0 2.5em;
  background-color: transparent;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.2);
  color: #000;
  font-size: 0.6rem;
  height: 3.325em;
  line-height: 3.325em;
  border-radius: 3.325em;
  padding: 0 2em;
}

.c0:active,
.c0:hover {
  box-shadow: inset 0 0 0 1px #FD5E0F;
  color: #FD5E0F;
}

.c0:active {
  background-color: rgba(253,94,15,0.2);
}

.c0:disabled {
  pointer-events: none;
  opacity: 0.25;
}

<a
  className="c0"
  href="/engineering/ux#example-list"
  small="true"
>
  Get Started
</a>
`;
